refactor(source-kafka): enhance ProtobufFormat with improved consumer configuration, error handling, and record collection logic